# palm-backed

./: .env  .env.example  .env.kira-pay.example  .gitignore  Deploy.md  KIRA_PAY_SETUP.md  README.md  RELAY_WALLET_SETUP.md  package-lock.json  package.json  pnpm-lock.yaml  tobase65.js  tsconfig.tsbuildinfo
app/: globals.css  layout.tsx  page.tsx
app/auth/error/: page.tsx
app/auth/login/: page.tsx
app/auth/logout/: route.ts
app/auth/sign-up/: page.tsx
app/auth/sign-up-success/: page.tsx
app/creator/new/: page.tsx
app/dashboard/: page.tsx
app/discover/: page.tsx
app/feed/: page.tsx
app/project/[id]/: page.tsx
components/app/: app-navbar.tsx  category-filter.tsx  project-card.tsx
components/feed/: feed-container.tsx  video-card.tsx
components/landing/: categories.tsx  cta.tsx  featured-projects.tsx  features.tsx  footer.tsx  hero.tsx  navbar.tsx  tech-stack.tsx
components/solana/: fund-project-dialog.tsx  payment-method-selector.tsx  sns-domain-button.tsx  wallet-button.tsx  wallet-provider.tsx
docs/: KIRA_PAY_INTEGRATION.md
hooks/: use-kira-pay.ts  use-sns-domain.ts  use-solana-program.ts
lib/kira-pay/: README.md  actions.ts  client.ts
lib/solana/: program.ts
lib/supabase/: middleware.ts
solo_fund_program/: .gitignore  Cargo.toml  wallet-keypair.json
solo_fund_program/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
supabase/: setup-database.md
supabase/migrations/: 20260508000000_initial_schema.sql  20260509000000_add_solana_funding_columns.sql  20260511000000_add_kira_pay_and_relay_columns.sql  README.md
(+4 files in other folders)
